--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,13 @@ h6 {
 	font-weight: 600;
 }
 
+p {
+	font-family: 'Open Sans', sans-serif;
+	font-size: large;
+}
+
+p.small {font-size: medium;}
+
 .full-width { width: 100%; max-width: 100%; }
 .feed {min-height: 80px;}
 
@@ -68,7 +75,9 @@ h6 {
 	font-size: 1em;
 	text-transform: uppercase;
 }
-
+.button.signup:hover{
+	background-color: #eda620;
+}
 .large {width:100%;}
 
 .speakers {
@@ -93,10 +102,8 @@ h6 {
 	background-color: #be5531 !important;
 }
 
-.callout {
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 700;
-	font-size: large;
+.alt:hover {
+	background-color: #712513 !important;
 }
 
 div.signup {
