--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ h6.status {
 }
 	.jumbotron .details {
 		font-family: 'Open Sans', sans-serif;
+		margin-top: 10px;
 		margin-bottom: 10px;
 		line-height: 2;
 		font-size: 1em;
@@ -312,6 +313,7 @@ div.address p span:hover {
 /==============================*/
 
 @media only screen and (max-width: 40em) {
+	
 	.logo {
 		width: 100%;
 	}
@@ -320,22 +322,25 @@ div.address p span:hover {
 		font-size: 1.2em;
 	}
 
-	.details {
+	.jumbotron .details {
 		border-top: none;
 		border-bottom: none;
 		margin: 0;
-		
 	}
+
 	.button.signup {
 		width: 90%;
 		margin-left: 15px;
+	}
 }
 
 @media only screen and (min-width: 40.063em) and (max-width: 64em) {
+	
 	.logo {
 		width: 70%;
 	}
-	.details {
+
+	.jumbotron .details {
 		margin: 0;
 		border-top: none;
 		border-bottom: none;
