Fixes robot stuff

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>Level Up Conference 2014: Practical Web Conference</title>
-
-<meta name="robots" content="noindex, nofollow">
-
-
+<title>Level Up: A creative tech conference</title>
 
 <link rel="icon" type="image/x-icon"                     href="img/favicon16x16.png">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicon144x144.png">
@@ -17,7 +13,8 @@
 <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 
-<meta name="description" content="A conference about JavaScript, CSS, components, grid and more." />
+<meta name="description" content="Level Up is a creative tech conference located in Saratoga Sprigns, NY that explores the process of creating and shipping modern software products." />
+<meta name="keywords" content="UX, UI, NodeJS, Ruby, PHP, BackboneJS, AngularJS, ObjectiveC, Java, Riak, Redis, User Experience, Creative Design">
 <meta name="author" content="MadGlory Interactive LLC., also includes madglory.com" />
 <meta name="copyright" content="MadGlory Interactive, LLC. Copyright (c) 2014" />
 <meta name="google-site-verification" content="hgr-9Ix8VkngElgtjEQR-CJWdWUutCToD-leoEwHctc" />
