Fixes robot stuff

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,10 +14,11 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 
 <meta name="description" content="Level Up is a creative tech conference located in Saratoga Sprigns, NY that explores the process of creating and shipping modern software products." />
-<meta name="keywords" content="UX, UI, NodeJS, Ruby, PHP, BackboneJS, AngularJS, ObjectiveC, Java, Riak, Redis, User Experience, Creative Design">
+<meta name="keywords" content="levelup, level up, UX, UI, NodeJS, Ruby, PHP, BackboneJS, AngularJS, ObjectiveC, Java, Riak, Redis, User Experience, Creative Design">
 <meta name="author" content="MadGlory Interactive LLC., also includes madglory.com" />
 <meta name="copyright" content="MadGlory Interactive, LLC. Copyright (c) 2014" />
 <meta name="google-site-verification" content="hgr-9Ix8VkngElgtjEQR-CJWdWUutCToD-leoEwHctc" />
+<meta name="robots" content="index, follow" />
 
 <script src="/js/modernizr.js"></script>
 
