Let's only include jquery once

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,32 @@
 
 <title>Level Up: A creative tech conference</title>
 
+<meta name="description" content="Level Up is a creative tech conference located in Saratoga Sprigns, NY that explores the process of creating and shipping modern software products." />
+<meta name="keywords" content="levelup, level up, UX, UI, NodeJS, Ruby, PHP, BackboneJS, AngularJS, ObjectiveC, Java, Riak, Redis, User Experience, Creative Design">
+<meta name="copyright" content="MadGlory Interactive, LLC. Copyright (c) 2014" />
+<meta name="google-site-verification" content="hgr-9Ix8VkngElgtjEQR-CJWdWUutCToD-leoEwHctc" />
+<meta name="robots" content="index, follow" />
+<link rel="author" href="https://plus.google.com/+Madgloryint"/>
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="Level Up is a creative tech conference located in Saratoga Sprigns, NY that explores the process of creating and shipping modern software products." />
+<meta name="twitter:site" content="@levelupcon" />
+<meta name="twitter:title" content="Level Up Conference" />
+
+<!-- Facebook -->
+<!-- <meta property="fb:admins" content="genexp" />
+<meta property="fb:app_id" content="446991438657382" /> -->
+
+<!-- OpenGraph -->
+<meta property="og:description" content="Level Up is a creative tech conference located in Saratoga Sprigns, NY that explores the process of creating and shipping modern software products." />
+<meta property="og:locale" content="en_US" />
+<meta property="og:site_name" content="Level Up Conference" />
+<meta property="og:title" content="Level Up: A creative tech conference" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://levelupcon.com/" />
+
+<!-- Favicons, Stylesheets, Javascripts -->
 <link rel="icon" type="image/x-icon"                     href="img/favicon16x16.png">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicon144x144.png">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/favicon114x114.png">
@@ -12,13 +38,6 @@
 <link rel="stylesheet" href="/css/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
-
-<meta name="description" content="Level Up is a creative tech conference located in Saratoga Sprigns, NY that explores the process of creating and shipping modern software products." />
-<meta name="keywords" content="levelup, level up, UX, UI, NodeJS, Ruby, PHP, BackboneJS, AngularJS, ObjectiveC, Java, Riak, Redis, User Experience, Creative Design">
-<meta name="author" content="MadGlory Interactive LLC., also includes madglory.com" />
-<meta name="copyright" content="MadGlory Interactive, LLC. Copyright (c) 2014" />
-<meta name="google-site-verification" content="hgr-9Ix8VkngElgtjEQR-CJWdWUutCToD-leoEwHctc" />
-<meta name="robots" content="index, follow" />
 
 <script src="/js/modernizr.js"></script>
 
