--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,6 @@
 <html class="no-js" lang="en">
   <head>
     {% include head.html %}
-
   </head>
 
   <body>
@@ -47,6 +46,7 @@
     {{ content }}
 
     <script src="/js/jquery.js"></script>
+    <script src="/js/app.js"></script>
     <script src="/js/foundation.min.js"></script>
     <script src="/js/foundation/foundation.interchange.js"></script>
     <script type="text/javascript" src="http://js.addthisevent.com/atemay.js"></script>
