Fixes spelling mistake

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 
 <title>Level Up: A creative tech conference</title>
 
-<meta name="description" content="Level Up is a creative tech conference located in Saratoga Sprigns, NY that explores the process of creating and shipping modern software products." />
+<meta name="description" content="Level Up is a creative tech conference located in Saratoga Springs, NY that explores the process of creating and shipping modern software products." />
 <meta name="keywords" content="levelup, level up, UX, UI, NodeJS, Ruby, PHP, BackboneJS, AngularJS, ObjectiveC, Java, Riak, Redis, User Experience, Creative Design">
 <meta name="copyright" content="MadGlory Interactive, LLC. Copyright (c) 2014" />
 <meta name="google-site-verification" content="hgr-9Ix8VkngElgtjEQR-CJWdWUutCToD-leoEwHctc" />
@@ -12,7 +12,7 @@
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="Level Up is a creative tech conference located in Saratoga Sprigns, NY that explores the process of creating and shipping modern software products." />
+<meta name="twitter:description" content="Level Up is a creative tech conference located in Saratoga Springs, NY that explores the process of creating and shipping modern software products." />
 <meta name="twitter:site" content="@levelupcon" />
 <meta name="twitter:title" content="Level Up Conference" />
 
@@ -21,7 +21,7 @@
 <meta property="fb:app_id" content="446991438657382" /> -->
 
 <!-- OpenGraph -->
-<meta property="og:description" content="Level Up is a creative tech conference located in Saratoga Sprigns, NY that explores the process of creating and shipping modern software products." />
+<meta property="og:description" content="Level Up is a creative tech conference located in Saratoga Springs, NY that explores the process of creating and shipping modern software products." />
 <meta property="og:locale" content="en_US" />
 <meta property="og:site_name" content="Level Up Conference" />
 <meta property="og:title" content="Level Up: A creative tech conference" />
