Adds twitter card image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 <meta name="twitter:description" content="Level Up is a creative tech conference located in Saratoga Springs, NY that explores the process of creating and shipping modern software products." />
 <meta name="twitter:site" content="@levelupcon" />
 <meta name="twitter:title" content="Level Up Conference" />
-
+<meta name="twitter:image:src" content="http://levelupcon.com/img/twitter-card.png">
 <!-- Facebook -->
 <!-- <meta property="fb:admins" content="genexp" />
 <meta property="fb:app_id" content="446991438657382" /> -->
