opengraph image for facebook sharing

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,7 @@
 <meta property="og:title" content="Level Up: A creative tech conference" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://levelupcon.com/" />
+<meta property="og:image" content="http://levelupcon.com/img/logo-lg.png"/>
 
 <!-- Favicons, Stylesheets, Javascripts -->
 <link rel="icon" type="image/x-icon"                     href="img/favicon16x16.png">
