--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,12 @@ figcaption.sponsor-title {
 	left: 46px;
 }
 
+.sponsor-logo {
+	display: block;
+	margin: 0 auto;
+	padding-top: 10px;
+}
+
 .none {
 
 	left: 76px;
